--- a/app/views/api/v1/company_targets/edit.html.erb
+++ b/app/views/api/v1/company_targets/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', company_target: @company_target %>
 
-<%= link_to 'Show', [:api, :v1, @company_target] %> |
-<%= link_to 'Back', api_v1_company_targets_path %>
+<%= link_to '詳細', [:api, :v1, @company_target] %> |
+<%= link_to 'ホーム', api_v1_company_targets_path %>
