--- a/app/views/api/v1/company_targets/index.html.erb
+++ b/app/views/api/v1/company_targets/index.html.erb
@@ -7,8 +7,7 @@
     <tr>
       <th>Monthly target</th>
       <th>Anually target</th>
-      <th>Company</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -17,16 +16,25 @@
       <tr>
         <td><%= company_target.monthly_target %></td>
         <td><%= company_target.anually_target %></td>
-        <td><%= company_target.company_id %></td>
         <td><%= link_to '詳細', [:api, :v1, company_target] %></td>
-        <td><%= link_to '編集', edit_api_v1_company_target_path(company_target) %></td>
-        <td><%= link_to '削除', api_v1_company_target_path(company_target), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%if current_api_v1_company%>
+          <td><%= link_to '編集', edit_api_v1_company_target_path(company_target) %></td>
+          <td><%= link_to '削除', api_v1_company_target_path(company_target), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%end%>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+
+<div>
+  <%= link_to 'DepartmentTarget', api_v1_department_targets_path %>
+</div>
+
+<div>
+  <%= link_to 'TodoTarget', api_v1_todo_targets_path %>
+</div>
 
 <%= link_to '新規作成', new_api_v1_company_target_path %>
 <div>
