--- a/app/views/api/v1/company_targets/new.html.erb
+++ b/app/views/api/v1/company_targets/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', company_target: @company_target %>
 
-<%= link_to 'Back', api_v1_company_targets_path %>
+<%= link_to 'ホーム', api_v1_company_targets_path %>
