--- a/app/views/api/v1/company_targets/show.html.erb
+++ b/app/views/api/v1/company_targets/show.html.erb
@@ -10,10 +10,7 @@
   <%= @company_target.anually_target %>
 </p>
 
-<p>
-  <strong>Company:</strong>
-  <%= @company_target.company_id %>
-</p>
-
-<%= link_to 'Edit', edit_api_v1_company_target_path(@company_target) %> |
-<%= link_to 'Back', api_v1_company_targets_path %>
+<%if current_api_v1_company%>
+  <%= link_to '編集', edit_api_v1_company_target_path(@company_target) %> |
+  <%= link_to 'ホーム', api_v1_company_targets_path %>
+<%end%>
