edit department_target view

--- a/app/views/api/v1/department_targets/edit.html.erb
+++ b/app/views/api/v1/department_targets/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', department_target: @department_target %>
 
-<%= link_to 'Show', [:api, v1, @department_target] %> |
-<%= link_to 'Back', api_v1_department_targets_path %>
+<%= link_to '詳細', [:api, v1, @department_target] %> |
+<%= link_to 'ホーム', api_v1_department_targets_path %>
