--- a/app/views/api/v1/department_targets/new.html.erb
+++ b/app/views/api/v1/department_targets/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', department_target: @department_target %>
 
-<%= link_to 'Back', api_v1_department_targets_path %>
+<%= link_to 'ホーム', api_v1_department_targets_path %>
