--- a/app/views/api/v1/department_targets/index.html.erb
+++ b/app/views/api/v1/department_targets/index.html.erb
@@ -8,7 +8,7 @@
       <th>Monthly target</th>
       <th>Anually target</th>
       <th>Department</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -17,10 +17,11 @@
       <tr>
         <td><%= department_target.monthly_target %></td>
         <td><%= department_target.anually_target %></td>
-        <td><%= department_target.department_id %></td>
-        <td><%= link_to 'Show', [:api, :v1, department_target] %></td>
-        <td><%= link_to 'Edit', edit_api_v1_department_target_path(department_target) %></td>
-        <td><%= link_to 'Destroy', api_v1_department_target_path(department_target), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細', [:api, :v1, department_target] %></td>
+        <%if current_api_v1_department%>
+          <td><%= link_to '編集', edit_api_v1_department_target_path(department_target) %></td>
+          <td><%= link_to '削除', api_v1_department_target_path(department_target), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%end%>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +29,15 @@
 
 <br>
 
-<%= link_to 'New Department Target', new_api_v1_department_target_path %>
+<div>
+  <%= link_to 'DepartmentTarget', api_v1_department_targets_path %>
+</div>
+
+<div>
+  <%= link_to 'TodoTargetへ！',  api_v1_todo_targets_path %>
+</div>
+
+<%= link_to '新規作成', new_api_v1_department_target_path %>
+<div>
+  <%= link_to 'ログアウト',  destroy_api_v1_department_session_path, :method => 'delete', class: 'btn btn-danger m-5' %>
+</div>
