--- a/app/views/api/v1/department_targets/show.html.erb
+++ b/app/views/api/v1/department_targets/show.html.erb
@@ -10,10 +10,7 @@
   <%= @department_target.anually_target %>
 </p>
 
-<p>
-  <strong>Department:</strong>
-  <%= @department_target.department_id %>
-</p>
-
-<%= link_to 'Edit', edit_api_v1_department_target_path(@department_target) %> |
-<%= link_to 'Back', api_v1_department_targets_path %>
+<%if current_api_v1_department%>
+  <%= link_to '編集', edit_api_v1_department_target_path(@department_target) %> |
+  <%= link_to 'ホーム', api_v1_department_targets_path %>
+<%end%>
