edit todo_target view

--- a/app/views/api/v1/todo_targets/show.html.erb
+++ b/app/views/api/v1/todo_targets/show.html.erb
@@ -10,5 +10,8 @@
   <%= @todo_target.department_id %>
 </p>
 
-<%= link_to 'Edit', edit_todo_target_path(@todo_target) %> |
-<%= link_to 'Back', todo_targets_path %>
+
+<% if current_api_v1_department %>
+  <%= link_to '編集', edit_api_v1_todo_target_path(@todo_target) %> |
+  <%= link_to 'ホーム', api_v1_todo_targets_path %>
+<%end%>
