--- a/app/views/api/v1/todo_targets/_form.html.erb
+++ b/app/views/api/v1/todo_targets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: todo_target) do |form| %>
+<%= form_with model: [:api, :v1, @todo_target] do |form| %>
   <% if todo_target.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(todo_target.errors.count, "error") %> prohibited this todo_target from being saved:</h2>
@@ -16,9 +16,9 @@
     <%= form.text_field :body %>
   </div>
 
-  <div class="field">
+    <div class="field">
     <%= form.label :department_id %>
-    <%= form.text_field :department_id %>
+    <%= form.collection_select :department_id, Department.all, :id, :departmentname, :prompt => "部署を選択" %>
   </div>
 
   <div class="actions">
