--- a/app/views/api/v1/todo_targets/edit.html.erb
+++ b/app/views/api/v1/todo_targets/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', todo_target: @todo_target %>
 
-<%= link_to 'Show', @todo_target %> |
-<%= link_to 'Back', todo_targets_path %>
+<%= link_to '詳細', [:api, :v1, @todo_target] %> |
+<%= link_to 'ホーム', api_v1_todo_targets_path %>
