--- a/app/views/api/v1/todo_targets/new.html.erb
+++ b/app/views/api/v1/todo_targets/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', todo_target: @todo_target %>
 
-<%= link_to 'Back', todo_targets_path %>
+<%= link_to 'ホーム', api_v1_todo_targets_path %>
