--- a/app/views/api/v1/todos/_form.html.erb
+++ b/app/views/api/v1/todos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: todo) do |form| %>
+<%= form_with model: [:api, :v1, @todo] do |form| %>
   <% if todo.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(todo.errors.count, "error") %> prohibited this todo from being saved:</h2>
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <%= form.label :todo_target_id %>
+    <%= form.collection_select :todo_target_id, TodoTarget.where(department_id: current_api_v1_user.department_id), :id, :body, :prompt => "TodoTargetを選択" %>
   </div>
 
   <div class="actions">
