--- a/app/views/api/v1/todos/index.html.erb
+++ b/app/views/api/v1/todos/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Body</th>
       <th>User</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -16,9 +16,12 @@
       <tr>
         <td><%= todo.body %></td>
         <td><%= todo.user_id %></td>
-        <td><%= link_to 'Show', todo %></td>
-        <td><%= link_to 'Edit', edit_todo_path(todo) %></td>
-        <td><%= link_to 'Destroy', todo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'ToDoTarget', api_v1_todo_target_path(todo.todo_target_id) %></td>
+        <td><%= link_to '詳細', [:api, :v1, todo] %></td>
+        <%if current_api_v1_user%>
+          <td><%= link_to '編集', edit_api_v1_todo_path(todo) %></td>
+          <td><%= link_to '削除', api_v1_todo_path(todo), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%end%>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +29,14 @@
 
 <br>
 
-<%= link_to 'New Todo', new_todo_path %>
+<div>
+  <%= link_to 'CompanyTargetへ！',  api_v1_company_targets_path %>
+</div>
+
+<div>
+  <%= link_to 'DepartmentTarget', api_v1_department_targets_path %>
+</div>
+
+<%= link_to '新規作成', new_api_v1_todo_path %>
+
+<%= link_to 'ホーム', api_v1_todos_path %>
