--- a/app/views/api/v1/department_targets/_form.html.erb
+++ b/app/views/api/v1/department_targets/_form.html.erb
@@ -1,28 +1,39 @@
-<%= form_with model: [:api, :v1, @department_target] do |form| %>
-  <% if department_target.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(department_target.errors.count, "error") %> prohibited this department_target from being saved:</h2>
+<section class="text-center m-5">
+  <%= form_with model: [:api, :v1, @department_target] do |form| %>
+    <% if department_target.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(department_target.errors.count, "error") %> prohibited this department_target from being saved:</h2>
 
-      <ul>
-        <% department_target.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+        <ul>
+          <% department_target.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= form.label :月%>
+      <%= form.select :month, 1..12 %>
+    </div>
+
+    <div class="field">
+      <%= form.label :月間目標 %>
+      <%= form.text_field :monthly_target %>
+    </div>
+
+    <div class="field">
+      <%= form.label :年間目標 %>
+      <%= form.text_field :anually_target %>
+    </div>
+
+    <div class="field">
+      <%= form.label :department_id %>
+      <%= form.collection_select :department_id, Department.all, :id, :departmentname, :prompt => "部署を選択" %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :monthly_target %>
-    <%= form.text_field :monthly_target %>
-  </div>
-
-  <div class="field">
-    <%= form.label :anually_target %>
-    <%= form.text_field :anually_target %>
-  </div>
-
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</section>
