--- a/app/views/api/v1/todo_targets/show.html.erb
+++ b/app/views/api/v1/todo_targets/show.html.erb
@@ -1,17 +1,54 @@
-<p id="notice"><%= notice %></p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Target</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to "ホーム", api_v1_todo_targets_path, class: "nav-link" %>
+        </li>
+        <%if current_api_v1_department %>
+          <li class="nav-item">
+            <%= link_to "新規作成", new_api_v1_todo_target_path, class: "nav-link" %>
+          </li>
+        <%end%>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            メニュー
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
+            <li><%= link_to 'CompanyTarget', api_v1_company_targets_path, class: "flex-sm-fill text-sm-center nav-link" %></li>
+            <li><%= link_to 'DepartmentTarget', api_v1_department_targets_path, class: "flex-sm-fill text-sm-center nav-link" %></li>
+            <li><%= link_to "Todo", api_v1_todos_path, class: "flex-sm-fill text-sm-center nav-link" %></li>
+          </ul>
+        </li>
+        <%if current_api_v1_department %>
+          <li class="nav-item">
+            <%= link_to "ログアウト", destroy_api_v1_department_session_path, :method => 'delete', class: "flex-sm-fill text-sm-center nav-link" %>
+          </li>
+        <%end%>
+      </ul>
+    </div>
+  </div>
+</nav>
+<section class="text-center m-5">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Body:</strong>
-  <%= @todo_target.body %>
-</p>
+  <p>
+    <strong>Body:</strong>
+    <%= @todo_target.body %>
+  </p>
 
-<p>
-  <strong>Department:</strong>
-  <%= @todo_target.department_id %>
-</p>
+  <p>
+    <strong>Department:</strong>
+    <%= Department.find(@todo_target.department_id).departmentname %>
+  </p>
 
 
-<% if current_api_v1_department %>
-  <%= link_to '編集', edit_api_v1_todo_target_path(@todo_target) %> |
-  <%= link_to 'ホーム', api_v1_todo_targets_path %>
-<%end%>
+  <% if current_api_v1_department %>
+    <%= link_to '編集', edit_api_v1_todo_target_path(@todo_target), class: "btn btn-success" %>
+    <%= link_to '削除', api_v1_todo_target_path(@todo_target), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+  <%end%>
+</section>
