--- a/app/views/api/v1/company_targets/_form.html.erb
+++ b/app/views/api/v1/company_targets/_form.html.erb
@@ -19,12 +19,12 @@
 
     <div class="field">
       <%= form.label :月間目標 %>
-      <%= form.text_field :monthly_target %>
+      <%= form.text_field :monthly_target, autocomplete: "off" %>
     </div>
 
     <div class="field">
       <%= form.label :年間目標 %>
-      <%= form.text_field :anually_target %>
+      <%= form.text_field :anually_target, autocomplete: "off" %>
     </div>
 
 
