--- a/app/views/api/v1/departments/registrations/new.html.erb
+++ b/app/views/api/v1/departments/registrations/new.html.erb
@@ -14,12 +14,13 @@
 
     <div class="field">
       <%= f.label :departmentname %><br />
-      <%= f.text_field :departmentname, autofocus: true, autocomplete: "departmentname" %>
+      <h5>会社名：部署名と入力してください</h5>
+      <%= f.text_field :departmentname, autofocus: true, autocomplete: "off" %>
     </div>
 
     <div class="field">
       <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "off" %>
     </div>
 
     <div class="field">
@@ -27,12 +28,12 @@
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> 文字以上)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
+      <%= f.password_field :password, autocomplete: "off" %>
     </div>
 
     <div class="field">
       <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
     </div>
 
     <div class="field">
