add guest user link

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -66,6 +66,9 @@
       </ul>
     </div>
   </section>
+    <div>
+      <%= link_to 'ゲストログイン（閲覧用）', api_v1_users_guest_sign_in_path, method: :post, class: "btn btn-success"%>
+    </div>
 </div>
 
 <footer class="bg-dark text-center text-lg-start text-white">
