--- a/app/views/api/v1/company_targets/index.html.erb
+++ b/app/views/api/v1/company_targets/index.html.erb
@@ -31,7 +31,7 @@
   </div>
 </nav>
 
-<div class="p-5 text-center mb-2 bg-light text-black">
+<div class="p-5 text-center mb-2 text-black">
   <section class="text-center m-5">
     <p id="notice"><%= notice %></p>
 
@@ -40,7 +40,7 @@
     <div class="p-3 mb-2 bg-dark text-white">
       <h3>今年度目標</h3>
     </div>
-    <div class="p-3 mb-2 bg-light text-dark">
+    <div class="p-3 mb-2 bg-success text-white">
       <% @company_targets.each do |company_target| %>
         <%if current_api_v1_company%>
           <h5><%= link_to company_target.anually_target, [:api, :v1, company_target], class: "link-dark" %></h5>
@@ -63,7 +63,7 @@
       <tbody>
         <% @company_targets.each do |company_target| %>
           <tr class=>
-            <td><%= company_target.month %></td>
+            <td><%= company_target.month %>月</td>
             <td></td>
             <%if current_api_v1_company %>
               <td><%= link_to company_target.monthly_target, [:api, :v1, company_target], class: "link-dark" %></td>
