--- a/app/views/api/v1/todo_targets/index.html.erb
+++ b/app/views/api/v1/todo_targets/index.html.erb
@@ -30,7 +30,7 @@
     </div>
   </div>
 </nav>
-<div class="p-5 text-center mb-2 bg-light text-black">
+<div class="p-5 text-center mb-2 text-black">
   <section class="text-center m-5">
     <p id="notice"><%= notice %></p>
 
