--- a/app/views/api/v1/company_targets/index.html.erb
+++ b/app/views/api/v1/company_targets/index.html.erb
@@ -43,7 +43,7 @@
     <div class="p-3 mb-2 bg-success text-white">
       <% @company_targets.each do |company_target| %>
         <%if current_api_v1_company%>
-          <h5><%= link_to company_target.anually_target, [:api, :v1, company_target], class: "link-dark" %></h5>
+          <h5><%= link_to company_target.anually_target, [:api, :v1, company_target], class: "link-light" %></h5>
         <%else%>
           <h5><%= company_target.anually_target %></h5>
         <%end%>
