--- a/app/views/api/v1/todo_targets/_form.html.erb
+++ b/app/views/api/v1/todo_targets/_form.html.erb
@@ -14,7 +14,7 @@
 
     <div class="field">
       <%= form.label :案件内容 %>
-      <%= form.text_field :body, autocomplete: "off" %>
+      <%= form.text_area :body, autocomplete: "off" %>
     </div>
 
     <div class="field">
