fix images public direction

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -50,7 +50,7 @@
 </nav>
 </div>
 <div class="text-center">
-  <img src="assets/main3.png" class="img-fluid" alt="..." >
+  <img src="/images/main3.png" class="img-fluid" alt="..." >
   <div>
     <%= link_to 'ゲストログイン（閲覧用）', api_v1_users_guest_sign_in_path, method: :post, class: "btn btn-success"%>
   </div>
@@ -81,7 +81,7 @@
           <div class="card-body">
             <h5 class="card-title">Targetは現在抱えているtodoがどの案件（todo-target）とリンクしているのかを明確にします</h5>
             <p class="card-text">また部署の目標、会社の目標も確認でき、さらに目標達成までの進捗状況をtodoやtodo-targetの完了度合いにより確認することができます。</p>
-            <img src="assets/pdca.jpg" class="img-fluid" alt="..." >
+            <img src="/images/pdca.jpg" class="img-fluid" alt="..." >
           </div>
           <div class="card-footer text-muted">
           </div>
@@ -99,7 +99,7 @@
       </div>
       <div class="col-10">
         <div class="card mb-3">
-          <img src="assets/company2.png" class="card-img-top img-fluid" alt="...">
+          <img src="/images/company2.png" class="card-img-top img-fluid" alt="...">
           <div class="card-body">
             <h5 class="card-title">Companyログイン時のDepartmentTargetの表示画面</h5>
             <p class="card-text">各部署の年間目標と月間目標が一覧で表示されます。</p>
@@ -120,7 +120,7 @@
       </div>
       <div class="col-10">
         <div class="card mb-3">
-          <img src="assets/department.png" class="card-img-top img-fluid" alt="...">
+          <img src="/images/department.png" class="card-img-top img-fluid" alt="...">
           <div class="card-body">
             <h5 class="card-title">Departmentログイン時のDepartmentTargetの表示画面</h5>
             <p class="card-text">ログイン部署の年間目標と月間目標が一覧で表示されます。</p>
@@ -141,7 +141,7 @@
       </div>
       <div class="col-10">
         <div class="card mb-3">
-          <img src="assets/todo.png" class="card-img-top img-fluid" alt="...">
+          <img src="/images/todo.png" class="card-img-top img-fluid" alt="...">
           <div class="card-body">
             <h5 class="card-title">Userログイン時のToDOの表示画面</h5>
             <p class="card-text">UserのToDoとリンクした案件が一覧で表示されます。</p>
