edit users view

--- a/app/views/api/v1/todos/index.html.erb
+++ b/app/views/api/v1/todos/index.html.erb
@@ -31,6 +31,9 @@
   </div>
 </nav>
 <div class="p-5 text-center mb-2 text-black">
+  <div class="profile">
+    <%= image_tag current_api_v1_user.image.to_s %>
+  </div>
   <section class="text-center m-5">
     <p id="notice"><%= notice %></p>
 
