fix rspec error

--- a/app/views/api/v1/todos/index.html.erb
+++ b/app/views/api/v1/todos/index.html.erb
@@ -32,7 +32,9 @@
 </nav>
 <div class="p-5 text-center mb-2 text-black">
   <div class="profile">
-    <%= image_tag current_api_v1_user.image.to_s %>
+    <% if current_api_v1_user %>
+      <%= image_tag current_api_v1_user.image.to_s %>
+    <% end %>
   </div>
   <section class="text-center m-5">
     <p id="notice"><%= notice %></p>
